# PyWeb20_HW_2

hw_2/: Dockerfile  main.py
hw_2_poetry/homework2/: Dockerfile  data.json  pyproject.toml
